--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sleep-promise": "^8.0.1"
   },
   "devDependencies": {
     "@zeit/next-sass": "^1.0.1",
