--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass-resources-loader": "^2.0.1",
     "sleep-promise": "^8.0.1"
   },
   "devDependencies": {
